--- a/brewdler/Brewfile
+++ b/brewdler/Brewfile
@@ -46,6 +46,7 @@ cask "appcleaner"
 cask "avira-antivirus"
 cask "caffeine"
 cask "coconutbattery"
+cask "dash"
 cask "dropbox"
 cask "evernote"
 cask "firefox"
