--- a/brewdler/Brewfile
+++ b/brewdler/Brewfile
@@ -1,78 +1,103 @@
 tap "buo/cask-upgrade"
+tap "heroku/brew"
 tap "homebrew/brewdler"
 tap "homebrew/cask"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
+tap "teamookla/speedtest"
 brew "aacgain"
-brew "openssl"
+brew "openssl@1.1"
 brew "autoconf"
 brew "readline"
+brew "python@3.8"
 brew "awscli"
+brew "gnutls"
+brew "cask"
 brew "clisp"
 brew "cmake"
 brew "composer"
+brew "harfbuzz"
 brew "lame"
 brew "ffmpeg"
+brew "freetds"
 brew "fswatch"
 brew "git"
 brew "git-secrets"
+brew "libxml2"
 brew "gtk-doc"
 brew "htop"
+brew "httpd"
 brew "imagemagick@6"
+brew "itstool"
 brew "libdvdcss"
+brew "libpq"
 brew "makedepend"
 brew "mas"
-brew "mkcert"
 brew "mysql@5.7", restart_service: true
 brew "nmap"
+brew "node"
 brew "nss"
 brew "openconnect"
 brew "pandoc"
 brew "postgresql"
-brew "python@2"
+brew "pyenv"
 brew "ruby-build"
 brew "rbenv"
-brew "redis"
+brew "ruby"
+brew "spidermonkey"
 brew "swiftlint"
-brew "terraform"
+brew "telnet"
 brew "tree"
 brew "unison"
-brew "vim"
-brew "wakatime-cli"
 brew "yarn"
 brew "youtube-dl"
+brew "zsh"
+brew "zsh-autosuggestions"
+brew "zsh-completions"
+brew "zsh-syntax-highlighting"
+brew "heroku/brew/heroku"
+cask "alfred"
 cask "appcleaner"
+cask "authy"
 cask "avira-antivirus"
+cask "brave-browser"
 cask "caffeine"
+cask "chromedriver"
 cask "coconutbattery"
 cask "dash"
-cask "dropbox"
-cask "evernote"
 cask "firefox"
 cask "flux"
+cask "google-backup-and-sync"
 cask "google-chrome"
+cask "google-chrome-canary"
 cask "gyazo"
 cask "karabiner-elements"
-cask "keyboardcleantool"
 cask "kindle"
+cask "microsoft-edge"
+cask "microsoft-edge-dev"
 cask "rubymine"
 cask "sequel-pro-nightly"
 cask "skitch"
-cask "soundflower"
+cask "steam"
 cask "the-unarchiver"
 cask "vagrant"
 cask "vagrant-manager"
 cask "virtualbox"
+cask "visual-studio-code"
 cask "xquartz"
+cask "zoomus"
 cask "zulu8"
+mas "Annotate", id: 918207447
 mas "Disk Speed Test", id: 425264550
 mas "Fotor Photo Editor", id: 503039729
 mas "Keynote", id: 409183694
 mas "LadioCast", id: 411213048
+mas "LINE", id: 539883307
+mas "macOS Catalinaインストール", id: 0
+mas "Magnet", id: 441258766
 mas "Mini Calendar", id: 1088779979
 mas "Numbers", id: 409203825
-mas "OS X El Capitan インストール", id: 1018109117
 mas "Pages", id: 409201541
 mas "Quiver", id: 866773894
 mas "Speedtest", id: 1153157709
